@startuml servicos_core_parte1_autenticacao_caixa
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Serviços Core (Parte 1: Autenticação, Caixa e Autorização)

' ╔══════════════════════════════════════╗
' ║          CAMADA DE SERVIÇO           ║
' ║    (Autenticação, Caixa e Autorização) ║
' ╚══════════════════════════════════════╝
package "Serviço (Autenticação, Caixa e Autorização)" #EEF9F4 {

  class AutenticacaoServico {
    - utilizadorRepositorio : UtilizadorRepositorio
    - auditoriaServico : AuditoriaServico
    + autenticar(nomeUtilizador : String, palavraPasse : String) : Utilizador
    + encerrarSessao(utilizador : Utilizador) : void
    + verificarSessaoDuplicada(utilizador : Utilizador) : boolean
  }

  class CaixaServico {
    - sessaoCaixaRepositorio : SessaoCaixaRepositorio
    - sangriaRepositorio : SangriaRepositorio
    - autorizacaoServico : AutorizacaoServico
    - auditoriaServico : AuditoriaServico
    + abrirSessao(utilizador : Utilizador, fundo : List~DetalheNumerario~, limiteMaximo : double) : SessaoCaixa
    + registarSangria(sessao : SessaoCaixa, utilizador : Utilizador, valor : List~DetalheNumerario~) : Sangria
    + fecharSessao(sessao : SessaoCaixa) : void
    + verificarLimite(sessao : SessaoCaixa) : boolean
  }

  class AutorizacaoServico {
    + exigirPerfil(utilizador : Utilizador, perfisPermitidos : PerfilUtilizador[]) : void
    + temPerfil(utilizador : Utilizador, perfil : PerfilUtilizador) : boolean
  }

  class AuditoriaServico {
    - logAuditoriaRepositorio : LogAuditoriaRepositorio
    + registar(utilizador : Utilizador, acao : TipoAcao, entidade : String, idEntidade : int) : void
  }

  class AcessoNegadoException {
    - perfilActual : PerfilUtilizador
    - perfisExigidos : List~PerfilUtilizador~
    + AcessoNegadoException(perfilActual : PerfilUtilizador, perfisExigidos : List~PerfilUtilizador~)
    + getPerfilActual() : PerfilUtilizador
    + getPerfisExigidos() : List~PerfilUtilizador~
  }
  note right of AcessoNegadoException
    Lançada por AutorizacaoServico
    quando o perfil do utilizador
    autenticado não satisfaz os perfis
    exigidos pela operação (RF2, RF22).
  end note

  class SessaoDuplicadaException {
    - nomeUtilizador : String
    + SessaoDuplicadaException(nomeUtilizador : String)
    + getNomeUtilizador() : String
  }
  note right of SessaoDuplicadaException
    Lançada por AutenticacaoServico
    quando um utilizador já se
    encontra em sessão ativa.
    Garante unicidade de sessão (RF2).
  end note
}

' Relações com Repositórios
AutenticacaoServico ..> UtilizadorRepositorio
CaixaServico ..> SessaoCaixaRepositorio
CaixaServico ..> SangriaRepositorio
AuditoriaServico ..> LogAuditoriaRepositorio

' Serviços usam AutorizacaoServico e AuditoriaServico
CaixaServico ..> AutorizacaoServico
AutenticacaoServico ..> AuditoriaServico : " regista logins"
CaixaServico ..> AuditoriaServico : " regista sangrias/sessões"

' Exceção lançada
AutorizacaoServico ..> AcessoNegadoException : <<lança>>
AutenticacaoServico ..> SessaoDuplicadaException : <<lança>>

@enduml
